# src/shared/infra/swagger.json
@@ -733,6 +733,55 @@
         }
       }
     },
+    "/events/eventsImIn/{id}": {
+      "get": {
+        "tags": [
+          "Event"
+        ],
+        "summary": "Get events im participating",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "User ID",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "allOf": [
+                      {
+                        "$ref": "#/components/schemas/Event"
+                      },
+                      {
+                        "type": "object",
+                        "properties": {
+                          "Sport": {
+                            "type": "array",
+                            "items": {
+                              "$ref": "#/components/schemas/Sport"
+                            }
+                          }
+                        }
+                      }
+                    ]
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/events/addTeam": {
       "post": {
         "tags": [
